--- a/scss/_formacion.scss
+++ b/scss/_formacion.scss
@@ -17,24 +17,25 @@
     @include flex(row, center, center, wrap);
     width: 100%;
     height: 100%;
+    margin: 100px 0px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .cardFlex .cardImg{
+    width: 100%;
+    height: 100%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.contCardImg{
     width: 500px;
     height: 500px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
 }
 .tituloCards{
     font-family: $font-title;
     font-size: 3rem;
     color: $colorT;
     margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
 }
-.c{
+.subTituloCards{
     font-family: $font-title;
     font-size: 1.8rem;
     color: $colorGC;
