+ pagina de inicio, liberia typed js, section certificados, CSS

--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -7,6 +7,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 //font-family: 'Lobster', cursive; (Especial)
 
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital@1&display=swap');
+//font-family: 'Chakra Petch', sans-serif;
+
 //PRINCIPAL
 
 *{
