--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,9 @@
 @import "mixins.scss";
 @import "commons.scss";
 @import "navBar.scss";
+@import "inicio.scss";
 @import "info.scss";
 @import "habilidades.scss";
 @import "formacion.scss";
-//@import "";
-//@import "";
+@import "certificados.scss";
 //@import "";
