--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital@1&display=swap");
 * {
   margin: 0px;
   padding: 0px;
@@ -67,17 +68,21 @@ p {
   padding: 25px 20px;
   background: rgba(0, 0, 0, 0) !important;
   transition: 1s;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
 }
 
 .navLinks {
   font-size: 1.8rem;
   font-family: "Chakra Petch", sans-serif;
-  color: rgb(24, 0, 64);
+  color: rgb(255, 255, 255);
   padding: 10px 0px;
+  margin: 0px 10px;
 }
 
 .navLinks:hover {
-  color: rgb(203, 11, 11);
+  color: rgb(241, 237, 10);
   transform: scale(1.1);
   transition: 0.5s;
   margin: 5px 10px;
@@ -99,6 +104,57 @@ p {
   transition: 1s;
 }
 
+.inicioCont {
+  width: 100%;
+  height: 100vh;
+  background-image: url(../img/wallpaper.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.contTitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 100px 10px;
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.backFilter {
+  width: 100%;
+  height: 100%;
+}
+
+.TituloTyped {
+  font-size: 5rem;
+  font-family: "Chakra Petch", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  filter: brightness(150%);
+  filter: inherit;
+}
+
+.spanTitulo {
+  color: rgb(255, 234, 4);
+}
+
+.textSubTyped {
+  margin-top: 40px;
+  color: rgb(255, 255, 255);
+}
+
 .containerInfo {
   background: linear-gradient(180deg, rgb(138, 136, 134) 0%, rgb(255, 255, 255) 100%);
   height: 100%;
@@ -111,7 +167,7 @@ p {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  padding: 100px 50px;
+  padding: 200px 50px;
 }
 
 .contFotoCv .fotoCv {
@@ -261,6 +317,16 @@ p {
   font-size: 1.8rem;
   color: rgb(71, 71, 71);
   padding: 10px 20px;
+}
+
+.contCertificados {
+  background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(167, 164, 164) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 200px 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
