--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -2,15 +2,19 @@
     padding: 25px 20px;
     background: rgba($color: #000000, $alpha: 0.0) !important;
     transition: 1s;
+    position: absolute;
+    width: 100%;
+    z-index: 10;
 }
 .navLinks{
     font-size: 1.8rem;
     font-family: $font-navbar;
-    color: rgb(24, 0, 64);
+    color: $colorW;
     padding: 10px 0px;
+    margin: 0px 10px;
 }
 .navLinks:hover{
-    color: rgb(203, 11, 11);
+    color: rgb(241, 237, 10);
     transform: scale(1.1);
     transition: 0.5s;
     margin: 5px 10px;
