--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,4 +7,7 @@
 @import "habilidades.scss";
 @import "formacion.scss";
 @import "certificados.scss";
-//@import "";
+@import "experiencia.scss";
+@import "contacto.scss";
+@import "proyectos.scss";
+@import "footer.scss"
