--- a/scss/_formacion.scss
+++ b/scss/_formacion.scss
@@ -16,7 +16,6 @@
 .cardFlex{
     @include flex(row, center, center, wrap);
     width: 100%;
-    height: 100%;
     margin: 100px 0px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
@@ -25,12 +24,9 @@
     height: 100%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
-.contCardImg{
-    width: 500px;
-    height: 500px;
-}
+¡
 .tituloCards{
-    font-family: $font-title;
+    font-family: $font-navbar;
     font-size: 3rem;
     color: $colorT;
     margin-bottom: 20px;
@@ -40,4 +36,15 @@
     font-size: 1.8rem;
     color: $colorGC;
     padding: 10px 20px;
+}
+.contImgOrg{
+    width: 100px;
+    height: 100px;
+    margin-bottom: 50px;
+}
+.imgOrg{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
