--- a/scss/_info.scss
+++ b/scss/_info.scss
@@ -7,6 +7,18 @@
     @include flex(row, space-evenly, center, wrap);
     padding: 200px 50px;
 }
+.nombreInfo{
+    margin-top: 30px;
+    font-size: 3rem;
+    font-family: $font-especial;
+    color: $colorT;
+}
+.espInfo{
+    margin: 20px 0px;
+    font-size: 2rem;
+    font-family: $font-navbar;
+    color: $colorGC;
+}
 .contFotoCv .fotoCv{
     width: 100%;
     height: 100%;
@@ -19,7 +31,7 @@
 }
 .infoFoto{
     @include flex(column, center, center, wrap);
-    padding: 50px 100px;
+
 }
 .infoFotoTitle{
     margin-bottom: 40px;
