--- a/scss/_navBar.scss
+++ b/scss/_navBar.scss
@@ -5,6 +5,7 @@
     position: absolute;
     width: 100%;
     z-index: 10;
+    
 }
 .navLinks{
     font-size: 1.8rem;
@@ -22,12 +23,13 @@
 /* navBar scroll */
 .navBarBottom{
     padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.7) !important;
+    background-color: rgba(255, 255, 255, 0.6) !important;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     position: fixed !important;
     z-index: 10 !important;
     transition: 1s;
     width: 100%;
+    backdrop-filter: blur(4px);
 }
 
 .navBarBottom .navLinksBottom{
